<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="weather"
            type="com.app.weatherapp.data.model.WeatherResponse" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        android:padding="24dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/btnDown"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            />

        <ImageView
            android:id="@+id/btnLocation"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_location" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnDown"
            android:layout_marginTop="32dp" />

        <TextView
            android:id="@+id/tvCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/overpass_bold"
            android:text="@string/home_placeholder_text"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/btnLocation"
            app:layout_constraintStart_toEndOf="@id/btnLocation"
            app:layout_constraintTop_toTopOf="@id/btnLocation" />



        <ImageView
            android:id="@+id/btnNotification"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_notification" app:layout_constraintTop_toTopOf="@id/btnLocation"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChat"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginEnd="12dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minWidth="0dp"
            android:text="@string/chat_title"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/btnNotification"
            app:layout_constraintEnd_toStartOf="@id/btnNotification"
            app:layout_constraintTop_toTopOf="@id/btnNotification" />

        <ImageView
            android:id="@+id/ivMainIcon"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/ic_cloud"
            app:layout_constraintTop_toBottomOf="@id/tvCity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_glass_card"
            android:padding="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/overpass"
                android:text="@string/home_placeholder_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/overpass"
                android:text="@string/home_placeholder_text"
                android:textColor="@color/white"
                android:textSize="80sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDate" />

            <TextView
                android:id="@+id/tvCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/overpass_bold"
                android:text="@string/home_placeholder_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTemp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/tvCondition"
                android:layout_marginTop="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_wind" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/overpass"
                        android:text="@string/home_wind_label"
                        android:textColor="@color/white" />
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_divider" android:textColor="@color/white" android:layout_marginHorizontal="16dp" />
                    <TextView
                        android:id="@+id/tvWindValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_wind_placeholder"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <ImageView android:layout_width="20dp" android:layout_height="20dp" android:src="@drawable/ic_hum" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/overpass"
                        android:text="@string/home_hum_label"
                        android:textColor="@color/white" />
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_divider" android:textColor="@color/white" android:layout_marginHorizontal="16dp" />
                    <TextView
                        android:id="@+id/tvHumValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_hum_placeholder"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>
            
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:indeterminateTint="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
                
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>